# husky_control_ilqg

./: CMakeLists.txt  README.md  package.xml
include/ilqg/: boxqp.h  ilqg.h  ilqg_differential_mobile.h  ilqg_mpc.h  pseudo_huber.h
src/: husky_control_ilqg.cpp
